--- a/package.xml
+++ b/package.xml
@@ -3,10 +3,8 @@
 
   <name>uranus_dp</name>
   <version>0.0.1</version>
-  <description>The uranus_dp package, containing the ROV motion control system.</description>
-  <maintainer email="mortenfyhnamundsen@gmail.com">Morten Fyhn Amundsen</maintainer>
-  <maintainer email="peteraaser@gmail.com">Peter Aaser</maintainer>
-  <url type="website">http://vortexntnu.no/</url>
+  <description>This temporary credit to Morten at Vortex for providing me with the basis for this project</description>
+  <maintainer email="eirstr92@gmail.com">Eirik Strand</maintainer>
   <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
